--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Anubhav,</span><br>Frontend
+                <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Anubhav,</span><br> Frontend
                     Developer</h1>
                 <a href="https://drive.google.com/file/d/1XZ9fsL_ro4Ca0L2FJaQwjxiUq1wXxoGY/view?usp=sharing" target="blank" class="button">Resume</a>
             </div>
@@ -61,17 +61,16 @@
                 </div>
 
                 <div>
-                    <h2 class="about__subtitle">I'am Anubhav</h2>
                     <p class="about__text">
-                        I am a Software Engineer with over <strong>4 years</strong> of experience,
-                        currently working as a <strong>React Developer at Infogain</strong>.
+                        I am a Software Engineer with <strong>4+ years</strong> of experience,
+                        currently working as a <strong>React Developer</strong> at <strong>Infogain</strong>.
                         My expertise revolves around developing modern, scalable, 
                         and highly interactive web applications using technologies
-                        such as <strong>React, TypeScript, Redux, and Saga Middleware</strong>.
-                        I have a strong grasp of JavaScript</strong> frameworks and libraries.
-                        I am also familiar with testing frameworks like <strong>Jest and React Testing Library</strong>.
+                        such as <strong>React, Redux, </strong> and <strong>TypeScript</strong>.
+                        I have a strong grasp of <strong>JavaScript</strong> frameworks and libraries.
+                        I am also familiar with testing frameworks like <strong>Jest</strong> and <strong>React Testing Library</strong>.
                         In addition to my frontend expertise, I consider myself quite adept at
-                        <strong>Problem Solving</strong> and <strong>Object-Oriented Programming</strong>.
+                        <strong>Problem Solving</strong> and <strong>Object-Oriented Programming</strong> as well.
                         I am passionate about continuous learning, exploring new technologies,
                         and optimizing existing solutions to make applications more performant
                         and user-friendly.
