--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="home__data">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Anubhav,</span><br> Frontend
                     Developer</h1>
-                <a href="https://drive.google.com/file/d/1XZ9fsL_ro4Ca0L2FJaQwjxiUq1wXxoGY/view?usp=sharing" target="blank" class="button">Resume</a>
+                <a href="https://drive.google.com/file/d/1tK1jlu7B6qMFb9mtnH5xlaCtzUYR_eAy/view?usp=sharing" target="blank" class="button">Resume</a>
             </div>
             <div class="home__social">
                 <a href="https://www.linkedin.com/in/experience2324/" class="home__social-icon" target="_blank"><i class='bx bxl-linkedin'></i></a>
@@ -63,7 +63,7 @@
                 <div>
                     <p class="about__text">
                         I am a Software Engineer with <strong>4+ years</strong> of experience,
-                        currently working as a <strong>React Developer</strong> at <strong>Infogain</strong>.
+                        currently working as a <strong>React Developer</strong> at <strong>Bounteous x Accolite</strong>.
                         My expertise revolves around developing modern, scalable, 
                         and highly interactive web applications using technologies
                         such as <strong>React, Redux, </strong> and <strong>TypeScript</strong>.
